now the game runs via nginx

--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -12,21 +12,13 @@ http {
     # allow large Unity files
     client_max_body_size 64m;
 
-    # Map Unity Brotli files to proper types + encoding
+    # Map Unity files to proper types
     types {
         application/wasm wasm;
         application/javascript js;
         application/json json;
         text/css css;
         text/html html;
-    }
-
-    # helper to serve .br with Content-Encoding
-    map $sent_http_content_type $br_type {
-        default "";
-        "application/wasm"       "br";
-        "application/javascript" "br";
-        "application/octet-stream" "br";
     }
 
     upstream app {
@@ -36,16 +28,18 @@ http {
     server {
         listen 80;
 
+        # --- Unity Brotli assets (.unityweb)
+        location ~* ^/static/.*\.unityweb$ {
+            root /usr/share/nginx/html;
+            add_header Content-Encoding br always;
+            add_header Vary Accept-Encoding;
+            try_files $uri =404;
+        }
+
         # --- Static assets served directly
         location /static/ {
             root /usr/share/nginx/html;
-            # Serve .br files with proper encodings
-            # Try exact file; if file.br exists, add Content-Encoding
-            try_files $uri $uri.br =404;
-            # If we serve .br, set encoding; otherwise leave it
-            add_header Content-Encoding br always;
-            add_header Vary Accept-Encoding;
-            # MIME types set by 'types' above
+            try_files $uri =404;
         }
 
         # --- API with edge rate limit
